fix spacing

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -4,7 +4,7 @@
     #hero-section {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 4rem;
+        gap: 64px;
         overflow: hidden;
         height: 75vh;
         min-height: 584px;
